--- a/order-service.yml
+++ b/order-service.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: order-service
   datasource:
-    url: url: jdbc:h2:mem:order_master
+    url: jdbc:h2:mem:order_master
     driverClassName: org.h2.Driver
   jpa:
     hibernate:
